		- The Battle for Azeroth Adventure Maps are now automated. Click the maps once and the rest is history.
		- The initial missions for unlocking the garrison are now automated. Click the Mission Table and watch as it closes on its own and your quest is completed. Do you even need to play?
		- If you're richer than the Trade Prince himself, simply speak with a Riding trainer, and as long as you have twice the cost of the training, HelpMePlay will automatically purchase your mount training. I'm saving you at least 2 mouse clicks per character!
	Bug Fixes:
		- Fixed an issue that caused HelpMePlay not to purchase quest items until the player spoke with the merchant a second time. That was annoying.
		- Fixed an issue that caused HelpMePlay not to conduct the 'thank' emote during "The Games We Play" quest in Ardenweald. This is the last time that Playful Trickster tricks us into manually entering /thank in our chat boxes!
		- Fixed an issue where incomplete quests took precedence over completed ones when submitting them. Some times you just want to complete a singular quest, am I right?
		- Fixed an issue where quests were treated like yesterday's jam when the NPC also had a supported dialog option. No one wants to hear Shin Stonepillar's fable more than once, right?
		- Fixed an issue that caused the modifier keys not to pause the quest automation when speaking with Trade Prince Gallywix on the boat in Zuldazar. We don't have time to invade the MOTHERLODE!!!
	Roadmap:
		- Localizing the addon to support more than English.
		- Adding an options menu so players can opt in and out of the automations.
		- Automate the selection of the Savage Fight Club in Gorgrond.
		- Automate an Alliance route. (This will follow Kraken Latte's leveling route.)
		- Automate taking flight paths when appropriate. (This will follow Kraken Latte's leveling route.)