@@ -23,6 +23,9 @@ MountTraining.lua
 # Automates the garrison mission table.
 GarrisonMissionTable.lua
 
+# Automates placing the player into War Mode.
+WarMode.lua
+
 # Automates player choice options like Threads of Fate (and maybe the Gorgrond outpost selection).
 PlayerChoice.lua
 
